# poc_shiny

./: .template_env  Dockerfile  README.md  pyproject.toml
poc_shiny/app/: app.py  gcs_get_json.py  gcs_get_parquet.py  get_local_data.py  load_all_data.py  menu.json
tiles/: metadata.json
tiles/0/0/: 0.mvt  0.pbf
tiles/1/0/: 0.mvt  0.pbf  1.mvt  1.pbf
tiles/1/1/: 0.mvt  0.pbf  1.mvt  1.pbf
tiles/10/782/: 494.mvt  499.mvt  505.mvt  506.mvt
tiles/10/783/: 504.mvt
tiles/10/785/: 494.mvt
tiles/10/786/: 506.mvt
tiles/10/787/: 494.mvt
tiles/10/788/: 506.mvt
tiles/10/791/: 494.mvt  501.mvt  502.mvt  506.mvt
tiles/11/1564/: 1011.mvt  1012.mvt  989.mvt
tiles/11/1565/: 989.mvt
tiles/11/1573/: 1002.mvt
tiles/11/1577/: 1012.mvt
tiles/11/1583/: 1008.mvt  1012.mvt  989.mvt
tiles/12/3128/: 1978.mvt  1993.mvt  2025.mvt
tiles/12/3129/: 1978.mvt  1989.mvt  2025.mvt
tiles/12/3147/: 1978.mvt
tiles/12/3150/: 2025.mvt
tiles/12/3166/: 1978.mvt  1997.mvt  2025.mvt
tiles/2/1/: 1.mvt  1.pbf  2.mvt  2.pbf
tiles/2/3/: 1.mvt  1.pbf
tiles/3/2/: 3.mvt  3.pbf  4.mvt  4.pbf
tiles/3/3/: 4.mvt  4.pbf
tiles/3/6/: 3.mvt  3.pbf
tiles/4/12/: 7.mvt  7.pbf
tiles/4/13/: 7.mvt  7.pbf
tiles/4/4/: 7.mvt  7.pbf  8.mvt  8.pbf
tiles/4/5/: 7.mvt  7.pbf  8.mvt  8.pbf
tiles/4/6/: 8.mvt  8.pbf
tiles/5/10/: 15.mvt  15.pbf  16.mvt  16.pbf
tiles/5/11/: 15.mvt  15.pbf  16.mvt  16.pbf  17.mvt  17.pbf
tiles/5/12/: 16.mvt  16.pbf  17.mvt  17.pbf
tiles/5/13/: 17.mvt  17.pbf
tiles/5/24/: 15.mvt  15.pbf
tiles/5/27/: 15.mvt  15.pbf
tiles/5/8/: 15.mvt  15.pbf  16.mvt  16.pbf
tiles/5/9/: 14.mvt  14.pbf  15.mvt  15.pbf  16.mvt  16.pbf  17.mvt  17.pbf
tiles/6/17/: 31.mvt  31.pbf  32.mvt  32.pbf  33.mvt  33.pbf
tiles/6/18/: 30.mvt  30.pbf  31.mvt  31.pbf  32.mvt  32.pbf  33.mvt  33.pbf  34.mvt  34.pbf
tiles/6/19/: 28.mvt  28.pbf  30.mvt  30.pbf  31.mvt  31.pbf  33.mvt  33.pbf  34.mvt  34.pbf
tiles/6/21/: 31.mvt  31.pbf  32.mvt  32.pbf  33.mvt  33.pbf
tiles/6/22/: 31.mvt  31.pbf  32.mvt  32.pbf  33.mvt  33.pbf
tiles/6/23/: 31.mvt  31.pbf  32.mvt  32.pbf  33.mvt  33.pbf  34.mvt  34.pbf
tiles/6/24/: 32.mvt  32.pbf  33.mvt  33.pbf  34.mvt  34.pbf  35.mvt  35.pbf
tiles/6/25/: 32.mvt  32.pbf  33.mvt  33.pbf  34.mvt  34.pbf  35.mvt  35.pbf
tiles/6/26/: 35.mvt  35.pbf
tiles/6/48/: 30.mvt  30.pbf  31.mvt  31.pbf
tiles/6/49/: 30.mvt  30.pbf  31.mvt  31.pbf
tiles/6/54/: 30.mvt  30.pbf  31.mvt  31.pbf
tiles/7/108/: 61.mvt  61.pbf  62.mvt  62.pbf
tiles/7/109/: 61.mvt  61.pbf
tiles/7/34/: 62.mvt  62.pbf
tiles/7/35/: 62.mvt  (+9 more)
(+1294 files in other folders)
